# skills

./: .gitignore  .gitmodules  README.md
ai-browser/: SKILL.md
argus-safety/: SKILL.md
email-processing/: .gitignore  README.md  SKILL.md  export_unprocessed.py  process_emails_gtd.py  pyproject.toml  send_reply.py
email-processing/config/: config.json  rules.yaml
email-processing/data/: processing_rules.yaml.example
email-processing/reference/: FOLDER_STRUCTURE.md  REMOTE_WORKFLOW.md
email-processing/scripts/: archive_all_inbox.py  archive_all_remaining.py  archive_all_reviewed.py  archive_by_id.py  archive_categorized_unread.py  archive_custom_categories.py  auto_archive_non_urgent.py  batch_archive_by_category.py  batch_archive_remaining.py  check_gmail_status.py  check_inbox_count.py  create_trello_card.py  export_all_inbox.py  export_all_unread.py  export_unprocessed.py  get_email_body.py  get_email_body_v2.py  list_specific_categories.py  mark_all_read.py  process_emails_automated.py  process_emails_interactive.py  process_review_list.py  processing_rules.yaml  show_urgent_emails.py  verify_tokens.py
email-processing/src/email_processor/: __init__.py  __main__.py
email-processing/src/email_processor/cli/: __init__.py  process.py  review.py  search.py
email-processing/src/email_processor/core/: __init__.py  gmail.py  llm_triage.py  rules_engine.py  secrets.py  trello.py
email-processing/src/email_processor/models/: __init__.py  email.py
email-processing/src/email_processor/storage/: __init__.py  file_storage.py
godaddy-dns/: SKILL.md
(+64 files in other folders)
