[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-processor"
version = "2.0.0"
description = "GTD-based email processing with LLM triage and Trello integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "google-api-python-client>=2.0.0",
  "google-auth>=2.0.0",
  "google-generativeai>=0.3.0",
  "pyyaml>=6.0",
]

[project.scripts]
email-processor = "email_processor.__main__:main"
